<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".Profile">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/navBarColor"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme">

        <ImageButton
            android:id="@+id/btn_backarrow"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:backgroundTint="#00FFFFFF"
            android:onClick="btnReturnToHome"
            android:src="@drawable/back_arrow"
            android:tint="#00FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/toolbar_logo" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="signOut"
        android:text="@string/sign_out"
        android:textColor="@color/common_google_signin_btn_text_dark_focused" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_profile"
                android:layout_width="313dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/profile_msg"
                android:textAlignment="center"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="371dp"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sex"
                    android:layout_marginLeft="20dp"
                    android:textSize="18sp"/>

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radio_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/male"
                        android:textColor="#FFFFFF"
                        android:layout_marginLeft="20dp"/>

                    <RadioButton
                        android:id="@+id/radio_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/female"
                        android:textColor="#FFFFFF" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/age"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:textSize="18sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/input_age"
                    android:layout_width="353dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:backgroundTint="@color/textColor"
                    android:ems="10"
                    android:inputType="number"
                    android:textColor="@color/textColor"
                    android:layout_marginBottom="10dp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/weight"
                        android:layout_marginLeft="20dp"
                        android:textSize="18sp"/>

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/radio_pounds"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:checked="true"
                            android:text="@string/pounds"
                            android:textColor="#FFFFFF"
                            android:layout_marginLeft="20dp"/>

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:checked="true"
                            android:text="@string/kilos"
                            android:textColor="#FFFFFF" />
                    </RadioGroup>

                </LinearLayout>

                <EditText
                    android:id="@+id/input_weight"
                    android:layout_width="356dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="@color/textColor"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:textColor="@color/textColor" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/height"
                        android:layout_marginLeft="20dp"
                        android:textSize="18sp"/>

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/radio_inches"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="@string/inches"
                            android:textColor="#FFFFFF"
                            android:layout_marginLeft="20dp"/>

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="@string/cm"
                            android:textColor="#FFFFFF" />
                    </RadioGroup>
                </LinearLayout>

                <EditText
                    android:id="@+id/input_height"
                    android:layout_width="356dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/textColor"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:textColor="@color/textColor"
                    android:layout_marginBottom="10dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:text="@string/weight_goal"
                    android:layout_marginLeft="20dp"
                    android:textSize="18sp"/>

            </LinearLayout>

            <Spinner
                android:id="@+id/spn_weight_goal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/textColor"
                android:entries="@array/weight_goals"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/activity_level"
                    android:layout_marginLeft="20dp"
                    android:textSize="18sp"/>

            </LinearLayout>

            <Spinner
                android:id="@+id/spn_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/textColor"
                android:entries="@array/activity_levels"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bf_optional"
                    android:layout_marginLeft="20dp"
                    android:textSize="18sp"/>

            </LinearLayout>

            <EditText
                android:id="@+id/input_body_fat"
                android:layout_width="356dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:backgroundTint="@color/textColor"
                android:ems="10"
                android:inputType="numberDecimal"
                android:textColor="@color/textColor" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="546dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="2"
                    android:text="@string/exp"
                    android:textSize="18sp" />

            </LinearLayout>

            <Spinner
                android:id="@+id/spn_experience"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/textColor"
                android:entries="@array/experience"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="543dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="2"
                    android:text="@string/train_loc"
                    android:textSize="18sp" />

            </LinearLayout>

            <Spinner
                android:id="@+id/spn_trainloc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/textColor"
                android:entries="@array/workout_location"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="540dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="2"
                    android:text="@string/workout_type"
                    android:textSize="18sp" />

            </LinearLayout>

            <Spinner
                android:id="@+id/spn_worktype"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/textColor"
                android:clickable="false"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="543dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="2"
                    android:text="@string/workout_days"
                    android:textSize="18sp" />

            </LinearLayout>

            <Spinner
                android:id="@+id/spn_workday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/textColor"
                android:entries="@array/days"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="540dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:text="@string/muscle_focus"
                    android:layout_marginLeft="20dp"
                    android:textSize="18sp" />

            </LinearLayout>

            <Spinner
                android:id="@+id/spn_muscleFocus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/textColor"
                android:entries="@array/muscle_groups"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"/>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="saveChanges"
            android:text="@string/confirm"
            android:textColor="@color/common_google_signin_btn_text_dark_focused" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="btnReturnToHome"
            android:text="@string/cancel"
            android:textColor="@color/common_google_signin_btn_text_dark_focused" />

    </LinearLayout>

</LinearLayout>